# tecina

./: .gitignore  CNAME  README.md  docker-compose.yaml  index.html  package-lock.json
.github/workflows/: deploy.yml  flows.yml
assets/: index-BvUA2X8i.js
backend/: .env.example  .gitignore  Dockerfile  mypy.ini  pyproject.toml
backend/src/: config.py  logging.py  main.py
backend/src/api/v1/: router.py
backend/src/api/v1/controllers/: gemini.py  gemini_controller.py
backend/src/schemas/: dialog.py  gemini.py
backend/src/services/: gemini.py  gemini_service.py
frontend/: .eslintrc.yml  .gitignore  CODEOWNERS  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.github/: flows.yml
frontend/public/: style.css
frontend/scripts/development/: build-and-run.sh
frontend/src/: config.ts  constants.ts  main.ts
frontend/src/assets/: AssetKeys.ts  Colors.ts  FontSizes.ts  animation-keys.ts  asset-keys.ts  assets.ts  colors.ts  constants.ts  fonts.ts  level_1.json
frontend/src/characters/: character.ts  npc.ts  player.ts  player_old.ts
frontend/src/common/: Direction.ts  controls.ts  (+6 more)
frontend/src/common-ui/: awards.ts  base-dialog.ts  dialog-ui.ts  dialog-with-options.ts  dialog.ts  health-bar.ts  requested-items.ts  text-button.ts  tooltip.ts  ui-component.ts  ui-object.ts
frontend/tiled-project/: level1.json  tecina.tiled-project
frontend/tiledProject/: custom_types.json  level1.json  level1.tmx  level2tmx  tecina.tiled-session
frontend/vite/: config.prod.mjs
(+100 files in other folders)
