[tool.poetry]
name = "tecina-backend"
version = "0.1.0"
description = "API for Tecina website"
authors = ["Pei <perezcastagnino.andres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
mypy-extensions = "^1.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
