[tool.poetry]
name = "tecina-backend"
version = "0.1.0"
description = "API for Tecina website"
authors = ["Pei <perezcastagnino.andres@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.scripts]
start = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000 --env-file .env"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
google-generativeai = "^0.8.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
mypy = "^1.13.0"
mypy-extensions = "^1.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
